--- a/ansible-workspace/tasks/AU/vnet/create_rg.yaml
+++ b/ansible-workspace/tasks/AU/vnet/create_rg.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Create Azure Resource Group
   azure_rm_resourcegroup:
-    name: "{{ globaliau.resourcegroup }}"
+    name: "{{ globalau.resourcegroup }}"
     location: "{{ globalau.region }}"
     state: "{{ globalau.state }}"
