--- a/ansible-workspace/tasks/AU/vnet/create_rg.yaml
+++ b/ansible-workspace/tasks/AU/vnet/create_rg.yaml
@@ -4,3 +4,4 @@
     name: "{{ globalau.resourcegroup }}"
     location: "{{ globalau.region }}"
     state: "{{ globalau.state }}"
+    force_delete_nonempty: "{{ globalau.force_delete_nonempty }}"
