--- a/ansible-workspace/tasks/UK/vnet/create_rg.yaml
+++ b/ansible-workspace/tasks/UK/vnet/create_rg.yaml
@@ -4,3 +4,4 @@
     name: "{{ globaluk.resourcegroup }}"
     location: "{{ globaluk.region }}"
     state: "{{ globaluk.state }}"
+    force_delete_nonempty: "{{ globaluk.force_delete_nonempty }}"
